--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
       <div class="page__menu-bar">
         <img class="page__menu-bar-logo" src="./Logo.svg" />
       </div>
-      <header class="page__header"><div class="avatar"></div></header>
+      <header class="page__header">
+        <div class="avatar">
+          <img class="avatar__pic" src="./Avatar.png" alt="Avatar Picture" />
+          <div class="avatar__details">
+            <div class="avatar__name-and-description">
+              <p class="avatar__name">Bessie Coleman</p>
+              <p class="avatar__description">Civil Aviator</p>
+            </div>
+            <button class="avatar__edit-button">
+              <!--<div class="icon__pencil">
+                <div class="icon__pencil-tip"></div>
+                <div class="icon__pencil-body"></div>
+                <div class="icon__pencil-end"></div>
+              </div> -->
+              <img class="avatar__edit-logo" src="pencil.svg" />
+              <p class="avatar__edit-text">Edit Profile</p>
+            </button>
+          </div>
+        </div>
+        <button class="page__header-button">+ New Post</button>
+      </header>
       <main class="page__main"></main>
       <footer></footer>
     </div>
