first full page finish

--- a/index.html
+++ b/index.html
@@ -29,8 +29,65 @@
         </div>
         <button class="page__header-button">+ New Post</button>
       </header>
-      <main class="page__main"></main>
-      <footer></footer>
+      <main class="page__cards">
+        <div class="card">
+          <img class="card-image" src="./val.png" alt="card image" />
+          <div class="card__details">
+            <p class="card__name">Val Thorens</p>
+            <button class="card__heart">
+              <img class="card__heart-image" src="./Union.svg" />
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card__image" src="./terrace.png" alt="card image" />
+          <div class="card__details">
+            <p class="card__name">Restaurant terrace</p>
+            <button class="card__heart">
+              <img class="card__heart-image" src="./Union.svg" />
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card__image" src="./cafe.png" alt="card image" />
+          <div class="card__details">
+            <p class="card__name">An outdoor cafe</p>
+            <button class="card__heart">
+              <img class="card__heart-image" src="./Union.svg" />
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card__image" src="./bridge.png" alt="card image" />
+          <div class="card__details">
+            <p class="card__name">A very long bridge over the forest...</p>
+            <button class="card__heart">
+              <img class="card__heart-image" src="./Union.svg" />
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card__image" src="./tunnel.png" alt="card image" />
+          <div class="card__details">
+            <p class="card__name">Tunnel with morning light</p>
+            <button class="card__heart">
+              <img class="card__heart-image" src="./Union.svg" />
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card__image" src="./m_house.png" alt="card image" />
+          <div class="card__details">
+            <p class="card__name">Mountain house</p>
+            <button class="card__heart">
+              <img class="card__heart-image" src="./Union.svg" />
+            </button>
+          </div>
+        </div>
+      </main>
+      <footer class="footer">
+        <p class="footer__copyright">2023 © Spots</p>
+      </footer>
     </div>
   </body>
 </html>
