--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-us">
   <head>
     <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="icon" href="./favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <title>Spots</title>
   </head>
 
   <body class="index__screen">
     <div class="page">
       <div class="page__menu-bar">
-        <img class="page__menu-bar-logo" src="./Logo.svg" />
+        <img class="page__menu-bar-logo" src="./Logo.svg" alt="Menu Logo" />
       </div>
       <header class="page__header">
-        <div class="avatar">
-          <img class="avatar__pic" src="./Avatar.png" alt="Avatar Picture" />
-          <div class="avatar__details">
-            <div class="avatar__name-and-description">
-              <p class="avatar__name">Bessie Coleman</p>
-              <p class="avatar__description">Civil Aviator</p>
+        <div class="profile">
+          <img class="profile__pic" src="./Avatar.png" alt="Avatar Picture" />
+          <div class="profile__details">
+            <div class="profile__name-and-description">
+              <p class="profile__name">Bessie Coleman</p>
+              <p class="profile__description">Civil Aviator</p>
             </div>
-            <button class="avatar__edit-button">
-              <!--<div class="icon__pencil">
-                <div class="icon__pencil-tip"></div>
-                <div class="icon__pencil-body"></div>
-                <div class="icon__pencil-end"></div>
-              </div> -->
-              <img class="avatar__edit-logo" src="pencil.svg" />
-              <p class="avatar__edit-text">Edit Profile</p>
+            <button class="profile__edit-button">
+              <img
+                class="profile__edit-logo"
+                src="pencil.svg"
+                alt="Edit Logo"
+              />
+              <div class="profile__edit-text">Edit Profile</div>
             </button>
           </div>
         </div>
@@ -31,11 +35,11 @@
       </header>
       <main class="page__cards">
         <div class="card">
-          <img class="card-image" src="./val.png" alt="card image" />
+          <img class="card__image" src="./val.png" alt="card image" />
           <div class="card__details">
             <p class="card__name">Val Thorens</p>
             <button class="card__heart">
-              <img class="card__heart-image" src="./Union.svg" />
+              <img class="card__heart-image" src="./Union.svg" alt="heart" />
             </button>
           </div>
         </div>
@@ -44,7 +48,7 @@
           <div class="card__details">
             <p class="card__name">Restaurant terrace</p>
             <button class="card__heart">
-              <img class="card__heart-image" src="./Union.svg" />
+              <img class="card__heart-image" src="./Union.svg" alt="heart" />
             </button>
           </div>
         </div>
@@ -53,7 +57,7 @@
           <div class="card__details">
             <p class="card__name">An outdoor cafe</p>
             <button class="card__heart">
-              <img class="card__heart-image" src="./Union.svg" />
+              <img class="card__heart-image" src="./Union.svg" alt="heart" />
             </button>
           </div>
         </div>
@@ -62,7 +66,7 @@
           <div class="card__details">
             <p class="card__name">A very long bridge over the forest...</p>
             <button class="card__heart">
-              <img class="card__heart-image" src="./Union.svg" />
+              <img class="card__heart-image" src="./Union.svg" alt="heart" />
             </button>
           </div>
         </div>
@@ -71,7 +75,7 @@
           <div class="card__details">
             <p class="card__name">Tunnel with morning light</p>
             <button class="card__heart">
-              <img class="card__heart-image" src="./Union.svg" />
+              <img class="card__heart-image" src="./Union.svg" alt="heart" />
             </button>
           </div>
         </div>
@@ -80,7 +84,7 @@
           <div class="card__details">
             <p class="card__name">Mountain house</p>
             <button class="card__heart">
-              <img class="card__heart-image" src="./Union.svg" />
+              <img class="card__heart-image" src="./Union.svg" alt="heart" />
             </button>
           </div>
         </div>
