font face and horizontal scroll fix

--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
   <body class="index__screen">
     <div class="page">
       <div class="page__menu-bar">
-        <img class="page__menu-bar-logo" src="./Logo.svg" alt="Menu Logo" />
+        <img
+          class="page__menu-bar-logo"
+          src="./images/Logo.svg"
+          alt="Menu Logo"
+        />
       </div>
       <header class="page__header">
         <div class="profile">
-          <img class="profile__pic" src="./Avatar.png" alt="Avatar Picture" />
+          <img
+            class="profile__pic"
+            src="./images/Avatar.png"
+            alt="Avatar Picture"
+          />
           <div class="profile__details">
             <div class="profile__name-and-description">
               <p class="profile__name">Bessie Coleman</p>
@@ -24,7 +32,7 @@
             <button class="profile__edit-button">
               <img
                 class="profile__edit-logo"
-                src="pencil.svg"
+                src="./images/pencil.svg"
                 alt="Edit Logo"
               />
               <div class="profile__edit-text">Edit Profile</div>
@@ -35,56 +43,88 @@
       </header>
       <main class="page__cards">
         <div class="card">
-          <img class="card__image" src="./val.png" alt="card image" />
+          <img class="card__image" src="./images/val.png" alt="card image" />
           <div class="card__details">
             <p class="card__name">Val Thorens</p>
             <button class="card__heart">
-              <img class="card__heart-image" src="./Union.svg" alt="heart" />
+              <img
+                class="card__heart-image"
+                src="./images/Union.svg"
+                alt="heart"
+              />
             </button>
           </div>
         </div>
         <div class="card">
-          <img class="card__image" src="./terrace.png" alt="card image" />
+          <img
+            class="card__image"
+            src="./images/terrace.png"
+            alt="card image"
+          />
           <div class="card__details">
             <p class="card__name">Restaurant terrace</p>
             <button class="card__heart">
-              <img class="card__heart-image" src="./Union.svg" alt="heart" />
+              <img
+                class="card__heart-image"
+                src="./images/Union.svg"
+                alt="heart"
+              />
             </button>
           </div>
         </div>
         <div class="card">
-          <img class="card__image" src="./cafe.png" alt="card image" />
+          <img class="card__image" src="./images/cafe.png" alt="card image" />
           <div class="card__details">
             <p class="card__name">An outdoor cafe</p>
             <button class="card__heart">
-              <img class="card__heart-image" src="./Union.svg" alt="heart" />
+              <img
+                class="card__heart-image"
+                src="./images/Union.svg"
+                alt="heart"
+              />
             </button>
           </div>
         </div>
         <div class="card">
-          <img class="card__image" src="./bridge.png" alt="card image" />
+          <img class="card__image" src="./images/bridge.png" alt="card image" />
           <div class="card__details">
             <p class="card__name">A very long bridge over the forest...</p>
             <button class="card__heart">
-              <img class="card__heart-image" src="./Union.svg" alt="heart" />
+              <img
+                class="card__heart-image"
+                src="./images/Union.svg"
+                alt="heart"
+              />
             </button>
           </div>
         </div>
         <div class="card">
-          <img class="card__image" src="./tunnel.png" alt="card image" />
+          <img class="card__image" src="./images/tunnel.png" alt="card image" />
           <div class="card__details">
             <p class="card__name">Tunnel with morning light</p>
             <button class="card__heart">
-              <img class="card__heart-image" src="./Union.svg" alt="heart" />
+              <img
+                class="card__heart-image"
+                src="./images/Union.svg"
+                alt="heart"
+              />
             </button>
           </div>
         </div>
         <div class="card">
-          <img class="card__image" src="./m_house.png" alt="card image" />
+          <img
+            class="card__image"
+            src="./images/m_house.png"
+            alt="card image"
+          />
           <div class="card__details">
             <p class="card__name">Mountain house</p>
             <button class="card__heart">
-              <img class="card__heart-image" src="./Union.svg" alt="heart" />
+              <img
+                class="card__heart-image"
+                src="./images/Union.svg"
+                alt="heart"
+              />
             </button>
           </div>
         </div>
