fixed scroll and font issues

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 src="./images/pencil.svg"
                 alt="Edit Logo"
               />
-              <div class="profile__edit-text">Edit Profile</div>
+              <span class="profile__edit-text">Edit Profile</span>
             </button>
           </div>
         </div>
