--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
     <title>Spots</title>
   </head>
 
-  <body class="index__screen">
-    <div class="page">
-      <div class="page__menu-bar">
-        <img
-          class="page__menu-bar-logo"
-          src="./images/Logo.svg"
-          alt="Menu Logo"
-        />
-      </div>
-      <header class="page__header">
-        <div class="profile">
+  <body class="page">
+    <div class="page__content">
+      <header class="header">
+        <img class="header__logo" src="./images/Logo.svg" alt="Menu Logo" />
+      </header>
+      <section class="profile">
+        <div class="profile__info">
           <img
             class="profile__pic"
             src="./images/Avatar.png"
@@ -26,10 +22,10 @@
           />
           <div class="profile__details">
             <div class="profile__name-and-description">
-              <p class="profile__name">Bessie Coleman</p>
+              <h1 class="profile__name">Bessie Coleman</h1>
               <p class="profile__description">Civil Aviator</p>
             </div>
-            <button class="profile__edit-button">
+            <button type="button" class="profile__edit-button">
               <img
                 class="profile__edit-logo"
                 src="./images/pencil.svg"
@@ -39,14 +35,14 @@
             </button>
           </div>
         </div>
-        <button class="page__header-button">+ New Post</button>
-      </header>
-      <main class="page__cards">
-        <div class="card">
+        <button type="button" class="page__header-button">+ New Post</button>
+      </section>
+      <section class="cards">
+        <div class="cards__card">
           <img class="card__image" src="./images/val.png" alt="card image" />
           <div class="card__details">
-            <p class="card__name">Val Thorens</p>
-            <button class="card__heart">
+            <h2 class="card__name">Val Thorens</h2>
+            <button type="button" class="card__heart">
               <img
                 class="card__heart-image"
                 src="./images/Union.svg"
@@ -55,15 +51,15 @@
             </button>
           </div>
         </div>
-        <div class="card">
+        <div class="cards__card">
           <img
             class="card__image"
             src="./images/terrace.png"
             alt="card image"
           />
           <div class="card__details">
-            <p class="card__name">Restaurant terrace</p>
-            <button class="card__heart">
+            <h2 class="card__name">Restaurant terrace</h2>
+            <button type="button" class="card__heart">
               <img
                 class="card__heart-image"
                 src="./images/Union.svg"
@@ -72,11 +68,11 @@
             </button>
           </div>
         </div>
-        <div class="card">
+        <div class="cards__card">
           <img class="card__image" src="./images/cafe.png" alt="card image" />
           <div class="card__details">
-            <p class="card__name">An outdoor cafe</p>
-            <button class="card__heart">
+            <h2 class="card__name">An outdoor cafe</h2>
+            <button type="button" class="card__heart">
               <img
                 class="card__heart-image"
                 src="./images/Union.svg"
@@ -85,11 +81,11 @@
             </button>
           </div>
         </div>
-        <div class="card">
+        <div class="cards__card">
           <img class="card__image" src="./images/bridge.png" alt="card image" />
           <div class="card__details">
-            <p class="card__name">A very long bridge over the forest...</p>
-            <button class="card__heart">
+            <h2 class="card__name">A very long bridge over the forest...</h2>
+            <button type="button" class="card__heart">
               <img
                 class="card__heart-image"
                 src="./images/Union.svg"
@@ -98,11 +94,11 @@
             </button>
           </div>
         </div>
-        <div class="card">
+        <div class="cards__card">
           <img class="card__image" src="./images/tunnel.png" alt="card image" />
           <div class="card__details">
-            <p class="card__name">Tunnel with morning light</p>
-            <button class="card__heart">
+            <h2 class="card__name">Tunnel with morning light</h2>
+            <button type="button" class="card__heart">
               <img
                 class="card__heart-image"
                 src="./images/Union.svg"
@@ -111,15 +107,15 @@
             </button>
           </div>
         </div>
-        <div class="card">
+        <div class="cards__card">
           <img
             class="card__image"
             src="./images/m_house.png"
             alt="card image"
           />
           <div class="card__details">
-            <p class="card__name">Mountain house</p>
-            <button class="card__heart">
+            <h2 class="card__name">Mountain house</h2>
+            <button type="button" class="card__heart">
               <img
                 class="card__heart-image"
                 src="./images/Union.svg"
@@ -128,9 +124,9 @@
             </button>
           </div>
         </div>
-      </main>
+      </section>
       <footer class="footer">
-        <p class="footer__copyright">2023 © Spots</p>
+        <p class="footer__copyright">2023 © Spots</h2>
       </footer>
     </div>
   </body>
