minor fix and video

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             </button>
           </div>
         </div>
-        <button type="button" class="page__header-button">+ New Post</button>
+        <button type="button" class="profile__new-post-btn">+ New Post</button>
       </section>
       <section class="cards">
-        <div class="cards__card">
+        <div class="card">
           <img class="card__image" src="./images/val.png" alt="card image" />
           <div class="card__details">
             <h2 class="card__name">Val Thorens</h2>
@@ -51,7 +51,7 @@
             </button>
           </div>
         </div>
-        <div class="cards__card">
+        <div class="card">
           <img
             class="card__image"
             src="./images/terrace.png"
@@ -68,7 +68,7 @@
             </button>
           </div>
         </div>
-        <div class="cards__card">
+        <div class="card">
           <img class="card__image" src="./images/cafe.png" alt="card image" />
           <div class="card__details">
             <h2 class="card__name">An outdoor cafe</h2>
@@ -81,7 +81,7 @@
             </button>
           </div>
         </div>
-        <div class="cards__card">
+        <div class="card">
           <img class="card__image" src="./images/bridge.png" alt="card image" />
           <div class="card__details">
             <h2 class="card__name">A very long bridge over the forest...</h2>
@@ -94,7 +94,7 @@
             </button>
           </div>
         </div>
-        <div class="cards__card">
+        <div class="card">
           <img class="card__image" src="./images/tunnel.png" alt="card image" />
           <div class="card__details">
             <h2 class="card__name">Tunnel with morning light</h2>
@@ -107,7 +107,7 @@
             </button>
           </div>
         </div>
-        <div class="cards__card">
+        <div class="card">
           <img
             class="card__image"
             src="./images/m_house.png"
@@ -126,7 +126,7 @@
         </div>
       </section>
       <footer class="footer">
-        <p class="footer__copyright">2023 © Spots</h2>
+        <h2 class="footer__copyright">2023 © Spots</h2>
       </footer>
     </div>
   </body>
