--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
   </head>
 
   <body class="page">
+    <div class="modal">
+      <div class="modal__container">
+        <div class="modal__heading-box">
+          <h2 class="modal__heading">Edit profile</h2>
+          <button class="modal__close-button">
+            <img src="./images/close.svg" />
+          </button>
+        </div>
+        <form class="modal__content">
+          <label class="modal__form-label"
+            >Name<input type="text" class="modal__input"
+          /></label>
+          <label class="modal__form-label"
+            >Description<input type="text" class="modal__input"
+          /></label>
+          <button class="modal__save">Save</button>
+        </form>
+      </div>
+    </div>
+
     <div class="page__content">
       <header class="header">
         <img class="header__logo" src="./images/Logo.svg" alt="Menu Logo" />
@@ -37,6 +57,7 @@
         </div>
         <button type="button" class="profile__new-post-btn">+ New Post</button>
       </section>
+
       <section class="cards">
         <div class="card">
           <img class="card__image" src="./images/val.png" alt="card image" />
@@ -125,10 +146,12 @@
           </div>
         </div>
       </section>
+
       <footer class="footer">
         <h2 class="footer__copyright">2023 © Spots</h2>
       </footer>
     </div>
+
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
