--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body class="page">
-    <div class="modal">
+    <div id="profile-edit" class="modal">
       <div class="modal__container">
         <div class="modal__heading-box">
           <h2 class="modal__heading">Edit profile</h2>
@@ -45,7 +45,11 @@
               <h1 class="profile__name">Bessie Coleman</h1>
               <p class="profile__description">Civil Aviator</p>
             </div>
-            <button type="button" class="profile__edit-button">
+            <button
+              id="profile-edit-button"
+              type="button"
+              class="profile__edit-button"
+            >
               <img
                 class="profile__edit-logo"
                 src="./images/pencil.svg"
