--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         <button type="button" class="profile__new-post-btn">+ New Post</button>
       </section>
 
-      <section class="cards">
+      <section id="cards" class="cards">
         <template id="card">
           <div class="card">
-            <img class="card__image" src="./images/val.png" alt="card image" />
+            <img class="card__image" alt="card image" />
             <div class="card__details">
-              <h2 class="card__name">Val Thorens</h2>
+              <h2 class="card__name">Name Here</h2>
               <button type="button" class="card__heart">
                 <img
                   class="card__heart-image"
