--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="profile__info">
           <img
             class="profile__pic"
-            src="./images/Avatar.png"
+            src="./images/Avatar.avif"
             alt="Avatar Picture"
           />
           <div class="profile__details">
