--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="modal__heading-box">
           <h2 class="modal__heading">Edit profile</h2>
           <button class="modal__close-button">
-            <img src="./images/close.svg" />
+            <img alt="Close Button" src="./images/close.svg" />
           </button>
         </div>
-        <form class="modal__content">
+        <form id="modal__form" class="modal__content">
           <label class="modal__form-label"
             >Name<input
               id="profile__name-edit"
