card image full pic functionality

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   </head>
 
   <body class="page">
+    <div id="picture__modal" class="modal">
+      <div class="modal__picture-box">
+        <button class="modal__close-button modal__picture-close">
+          <img alt="Close Button" src="./images/delete2.png" />
+        </button>
+        <img src="./images/landscapeTest.avif" class="modal__picture" />
+        <div class="modal__picture-caption">amogus</div>
+      </div>
+    </div>
+
     <div id="add-card" class="modal">
       <div class="modal__container">
         <div class="modal__heading-box">
@@ -108,15 +118,6 @@
               <button type="button" class="card__heart"></button>
             </div>
           </div>
-        </template>
-        <template>
-          <div>
-            <img />
-          </div>
-          <button class="modal__close-button modal__picture-close">
-            <img alt="Close Button" src="./images/close.svg" />
-          </button>
-          <div></div>
         </template>
       </section>
 
