hotfix 17w25a made settings config obj

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img alt="Close Button" src="./images/close.svg" />
           </button>
         </div>
-        <form id="new-post-modal__form" class="modal__content" novalidate>
+        <form id="new-post-modal__form" class="modal__form" novalidate>
           <label class="modal__form-label"
             >Image Link<input
               id="card__image_form"
@@ -62,7 +62,7 @@
             <img alt="Close Button" src="./images/close.svg" />
           </button>
         </div>
-        <form id="profile-modal__form" class="modal__content" novalidate>
+        <form id="profile-modal__form" class="modal__form" novalidate>
           <label class="modal__form-label"
             >Name<input
               id="profile__name-edit"
