--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <link rel="stylesheet" href="./src/pages/index.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
@@ -12,9 +12,9 @@
     <div id="picture__modal" class="modal">
       <div class="modal__picture-box">
         <button class="modal__close-button modal__picture-close">
-          <img alt="Close Button" id="close-button0" />
+          <img src="" alt="Close Button" id="close-button0" />
         </button>
-        <img alt="" class="modal__picture" />
+        <img src="" alt="" class="modal__picture" />
         <p class="modal__picture-caption">Image Title</p>
       </div>
     </div>
@@ -24,7 +24,7 @@
         <div class="modal__heading-box">
           <h2 class="modal__heading">New post</h2>
           <button class="modal__close-button">
-            <img alt="Close Button" id="close-button1" />
+            <img src="" alt="Close Button" id="close-button1" />
           </button>
         </div>
         <form id="new-post-modal__form" class="modal__form" novalidate>
@@ -33,6 +33,7 @@
               id="card__image_form"
               placeholder="Paste a link to the picture"
               type="url"
+              name="image-link"
               class="modal__input"
               required />
             <p class="error__message"></p
@@ -44,6 +45,7 @@
               placeholder="Type your caption"
               type="text"
               class="modal__input"
+              name="caption"
               minlength="2"
               maxlength="30"
               required />
@@ -59,7 +61,7 @@
         <div class="modal__heading-box">
           <h2 class="modal__heading">Edit profile</h2>
           <button class="modal__close-button">
-            <img alt="Close Button" id="close-button2" />
+            <img src="" alt="Close Button" id="close-button2" />
           </button>
         </div>
         <form id="profile-modal__form" class="modal__form" novalidate>
@@ -82,22 +84,34 @@
               class="modal__input"
               minlength="2"
               maxlength="200"
-              required />
-            <p class="error__message"></p
-          ></label>
+              required
+            />
+            <span class="error__message"></span>
+          </label>
           <button class="modal__button-save">Save</button>
         </form>
       </div>
     </div>
 
+    <div id="delete-card" class="modal">
+      <div class="delete__card">
+        <p class="delete__card_title">
+          Are you sure you want to delete this Image?
+        </p>
+        <div class="delete__card_buttonBox">
+          <button class=""></button><button></button>
+        </div>
+      </div>
+    </div>
+
     <div class="page__content">
       <header class="header">
-        <img class="header__logo" id="logo" alt="Menu Logo" />
+        <img src="" class="header__logo" id="logo" alt="Menu Logo" />
       </header>
       <main>
         <section class="profile">
           <div class="profile__info">
-            <img class="profile__pic" id="avatar" alt="Avatar Picture" />
+            <img src="" class="profile__pic" id="avatar" alt="Avatar Picture" />
             <div class="profile__details">
               <div class="profile__name-and-description">
                 <h1 class="profile__name">Bessie Coleman</h1>
@@ -109,6 +123,7 @@
                 class="profile__edit-button"
               >
                 <img
+                  src=""
                   class="profile__edit-logo"
                   id="logo_pencil"
                   alt="Edit Logo"
@@ -125,7 +140,7 @@
         <section id="cards" class="cards">
           <template id="card">
             <div class="card">
-              <img class="card__image" alt="card image" />
+              <img src="" class="card__image" alt="card image" />
               <button class="card__delete-button"></button>
               <div class="card__details">
                 <h2 class="card__name">Name Here</h2>
