--- a/src/index.html
+++ b/src/index.html
@@ -95,13 +95,17 @@
 
     <div id="delete-card" class="modal">
       <div class="delete__card">
-        <p class="delete__card_title">
+        <p class="delete__Card_title">
           Are you sure you want to delete this Image?
         </p>
         <div class="delete__card_buttonBox">
-          <button class=""></button><button></button>
+          <button class="button button__confirm-delete">Delete</button
+          ><button class="button button__cancel">Cancel</button>
         </div>
       </div>
+      <button class="modal__close-button modal__close-button_white">
+        <img src="" alt="Close Button" id="close-button3" />
+      </button>
     </div>
 
     <div class="page__content">
